# PAL-SDK

./: .gitattributes  README.md  ros_demo.sh  setup_lfs.sh
Explorer/: Explorer  SavedPalProperties.txt
Explorer/arm64/: Explorer
Explorer/arm64/JP-5.0/: Explorer
Explorer/arm64/JetPack-4.6.1/: Explorer
Explorer/arm64/JetPack-5.0.2/: Explorer
Explorer/x86_64/: Explorer
PYTHON/: readme.txt
PYTHON/code_samples/: person_detection.py  readme.txt  stereo_panaroma.py
PYTHON/tutorials/: clean.sh  main1.py  main2.py  main3.py  main4.py  run.sh
UART_Receiver/: build.sh  uart_receiver.cpp
code_samples/: 001_stereo_panorama.cpp  002_depth_panorama.cpp  002_disparity_panorama.cpp  003_range_scan_panorama.cpp  003_video_capture.cpp  004_camera_properties.cpp  004_video_capture.cpp  005_camera_properties.cpp  005_person_detection.cpp  005_resolutions.cpp  006_occupancy_map.cpp  006_person_detections.cpp  007_3d_person_locations.cpp  008_social_distancing.cpp  009_object_detection.cpp  010_safe_zone_detection.cpp  011_object_tracking.cpp  012_people_following.cpp  013_object_tracking_GPIO.cpp  014_UART_sender.cpp  autostart.sh  compile.ps1  compile.sh  readme.txt
code_samples/cpp/: 001_stereo_panorama.cpp  002_depth_panorama.cpp  003_range_scan_panorama.cpp  004_video_capture.cpp  005_camera_properties.cpp  006_occupancy_map.cpp  007_people_tracking.cpp  008_people_following.cpp  009_object_tracking.cpp  010_object_following.cpp  011_object_detection.cpp  012_social_distancing.cpp  013_safe_zone_detection.cpp  014_object_tracking_GPIO.cpp  015_people_tracking_UART.cpp  016_multi_zone_detection.cpp  016_zone_detection.cpp  017_3d_person_locations.cpp  compile.sh  readme.txt
code_samples/python/: 001_stereo_panorama.py  002_depth_panorama.py  003_range_scan_panorama.py  004_video_capture.py  005_camera_properties.py  006_occupancy_map.py  007_people_tracking.py  008_people_following.py  009_object_tracking.py  010_object_following.py  011_object_detection.py  012_social_distancing.py  013_safe_zone_detection.py  014_multi_zone_detection.py  014_zone_detection.py  015_3d_person_locations.py  readme.txt
dreamvu_pal_camera/: CMakeLists.txt  README.md  SavedPalProperties.txt  package.xml
dreamvu_pal_camera/cmake_template/: footer.txt  header.txt
dreamvu_pal_camera/launch/: detect.rviz  detectall.rviz  detection_rviz.launch  detectionall_rviz.launch  pal.rviz  pal_rviz.launch
dreamvu_pal_camera/msg/: BoundingBox.msg  BoundingBoxArray.msg
dreamvu_pal_camera/src/: SavedPalProperties.txt  pal_camera_node.cpp  person_detection_node.cpp  sample_ROS_node.cpp  sample_detection_sub.cpp
dreamvu_pal_navigation/: CMakeLists.txt  README.md  amcl.launch  amcl_multicam.launch  base_local_planner_params.yaml  costmap_common_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml  gmapping.launch  gmapping_multicam.launch  laser_filter.yml  map.pgm  move_base.launch  package.xml
dreamvu_pal_navigation/cmake_template/arm64/: footer.txt
dreamvu_pal_navigation/cmake_template/x86_64/: footer.txt  header.txt
dreamvu_pal_navigation/cmake_template/x86_64_gpu/: footer.txt
dreamvu_pal_navigation/launch/: broadcast.launch  gmapping.rviz  gmapping_multicam.rviz  merge.launch  multi_scan.rviz  multi_scan_rviz.launch  scan.rviz  scan_rviz.launch
dreamvu_pal_navigation/src/: SavedPalProperties.txt  broadcast_scan_node.cpp  depth_scan_node.cpp  multi_depth_scan_node.cpp
include/: CameraProperties.h  DataExchange.h  PAL.h  PAL_CameraProperties.h  PAL_Image.h  StructEnumInfo.h  TimeLogger.h
installations/: PAL_udev.sh  add_paths.ps1  cmake_install.ps1  dependencies.sh  install.ps1  install.sh  opencv.pc  opencv.ps1  opencv.sh  pal.pc  python_requirements.txt  rc.local  ros.sh  ros_cmake.sh  setsymlinks.sh  setup_env.sh  setup_python_env.ps1  setup_python_env.sh  test_py_installations.py  timeout_patch.sh  uninstall.sh
installations/activation/: activation.sh  credentials.json  run  token.json  unit.txt
installations/bin_files/: build_engines.sh  setup.sh
installations/bin_files/data/: engine_depth128.trt  engine_depth384.trt  engine_detection.trt  engine_floor.trt  engine_track.trt  token.json  unit.txt
installations/bin_files/generate/: 1.cache  2.cache  3.cache  4.cache
installations/camera_data/: dualenet.onnx  setup_python_lib.ps1  setup_python_lib.sh
installations/camera_data/data/: LUT_Dimensions.h
installations/data_installer/: run  token.json  validate.sh
installations/python_data/: setup_python_lib.sh
lib/x86_64/: libturbojpeg.so.0
lib/x86_64/bionic/cpu/: libturbojpeg.so.0
lib/x86_64/bionic/gpu/: libturbojpeg.so.0
lib/x86_64/focal/cpu/: libturbojpeg.so.0
lib/x86_64/focal/gpu/: libturbojpeg.so.0
lib/x86_64/jammy/cpu/: libturbojpeg.so.0
lib/x86_64_focal/: libturbojpeg.so.0
tutorials/: 001_cv_png.cpp  002_set_properties.cpp  003_disparity.cpp  003_point_cloud.cpp  004_point_cloud.cpp  clean.sh  compile.ps1  compile.sh  run.sh
